# abcattrs

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  abcattrs_plugin.py  codecov.yml  goose.yaml  mypy.ini  prog.py  pyproject.toml  requirements-typing.txt  ruff.toml  setup.cfg
.github/workflows/: ci.yaml  release.yaml
.goose/check-manifest/: manifest.json  requirements.txt
.goose/mypy/: manifest.json  requirements.txt
.goose/node/: manifest.json  package-lock.json
.goose/python/: manifest.json  requirements.txt
abcattrs/: __init__.py  abcattrs.py  type_hints.py  typing_redirect.py
src/abcattrs/: __init__.py  abcattrs.py  type_hints.py
tests/: test_decorator.py
