[metadata]
name = abcattrs
version = attr: abcattrs.__version__
description = Abstract class attributes
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 3 - Alpha
author = Anton Agestam
author_email = git@antonagestam.se
url = https://github.com/antonagestam/abcattrs/

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    typing-extensions ; python_version < "3.10"

[options.package_data]
abcattrs = py.typed

[options.extras_require]
test =
    pytest
    pytest-mypy-plugins
    coverage

[mypy]
python_version = 3.8
show_error_codes = True
pretty = True
files = .

ignore_missing_imports = False
no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
# disallow_any_expr = True
# disallow_any_explicit = True
disallow_any_decorated = True
disallow_untyped_decorators = True
disallow_subclassing_any = True

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[flake8]
exclude = appveyor,.idea,.git,.venv,.tox,__pycache__,*.egg-info,build
max-complexity = 8
max-line-length = 88
# B008: It's ok to instantiate instances as defaults.
# E203: Black does the right thing, flake8 doesn't.
# B024: Abstract base classes should not be expected to introduce abstract methods.
# E701 and E704: Black and flake8 disagree on multiline function definitions.
extend-ignore = E203 B008 B024 E701 E704

[isort]
profile = black
force_single_line = True

[coverage:report]
exclude_lines =
    pragma: no cover
    # ignore non-implementations
    ^\s*\.\.\.
